--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/Boop"
     android:layout_width="match_parent"
@@ -19,9 +18,9 @@
             android:layout_weight="0.5"
             android:fontFamily="casual"
             android:gravity="center"
-            android:text="15 Squares Puzzle"
+            android:text="@string/title"
             android:textAlignment="center"
-            android:textSize="75dp"
+            android:textSize="75sp"
             android:layout_margin="10dp"
             android:textColor="@color/white"/>
 
@@ -39,28 +38,21 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/smallerButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:layout_weight="1"
-                android:text="Size -" />
-
-            <Button
                 android:id="@+id/resetButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:layout_weight="0.6"
-                android:text="Reset" />
-
-            <Button
-                android:id="@+id/largerButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:text="Size +" />
+                android:text="@string/reset"
+                android:textSize="30sp"/>
+            <SeekBar
+                android:id="@+id/sizeBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:min="3"
+                android:progress="4"
+                android:max="10" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
